[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-corridor-v52-core"
version = "0.1.0"
description = "A topology-audited inscribed-sphere safe corridor planner for static 3D environments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "networkx>=3.2",
  "scikit-image>=0.22",
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
gpu = [
  "cupy-cuda12x>=13.0",
]

[project.scripts]
tunnel-corridor-core = "tunnel_corridor_v52.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
